k8s-yaml/eloan-prod-refactor/eloan-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eloan-prod-refactor
  namespace: prod
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: eloan-prod-refactor
    spec:
      containers:
      - image: 192.168.11.53:8082/eloan-prod-refactor:2.1.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /test
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: eloan-prod-refactor
        ports:
        - containerPort: 8080
          hostPort: 9999
          name: eloan-refactor
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /test
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /usr/local/tomcat/logs
          name: eloan-portal-refactor-log
        - mountPath: /home/tomcat/pageUpload
          name: eloan-page-upload
        - mountPath: /mfbmsDataFile/signaturesFile/eloan
          name: eloan-signatures
        - mountPath: /home/tomcat/upload
          name: eloan-upload
        - mountPath: /home/tomcat/reportUpload
          name: eloan-reportupload
        - mountPath: /home/tomcat/invitationQrCodeUpload
          name: eloan-invitationqrcodeupload
      restartPolicy: Always
      nodeSelector:
        app: eloan-prod-refactor
      volumes:
      - hostPath:
          path: /app/logs/eloan-portal-refactor
        name: eloan-portal-refactor-log
      - name: eloan-page-upload
        nfs:
          path: /volume1/eloan-attachment-prod/pageUpload
          server: 192.168.3.64
      - name: eloan-signatures
        nfs:
          path: /volume1/LuYin/signaturesFile/eloan
          server: 192.168.3.34
      - name: eloan-upload
        nfs:
          path: /volume1/eloan-attachment-prod/upload
          server: 192.168.3.64
      - name: eloan-reportupload
        nfs:
          path: /volume1/eloan-attachment-prod/reportUpload
          server: 192.168.3.64
      - name: eloan-invitationqrcodeupload
        nfs:
          path: /volume1/eloan-attachment-prod/invitationQrCodeUpload
          server: 192.168.3.64
