k8s-yaml/eloan-prod-refactor/eloan-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eloan-ingress
  namespace: prod
spec:
  rules:
  - host: prod.eloan-portal-refactor.com
    http:
      paths:
      - backend:
          serviceName: eloan-svc-refactor
          servicePort: 80
        path: /
